<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btn_settings"
        android:title="Settings" />

    <item
        android:id="@+id/btn_change_password"
        android:title="Change Password" />

    <item
        android:id="@+id/btn_logout"
        android:title="Logout" />


</menu>