<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_collections_24"
        android:title="Photo-Spots" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="My Photo-Spots" />

    <item
        android:id="@+id/navigation_Camera"
        android:icon="@drawable/ic_baseline_add_location_alt_24"
        android:title="Add Spot" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/title_map" />

</menu>