<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ViewPicture">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/viewloc_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="viewloc_textview_address,viewloc_textview_label_by"
            tools:layout_editor_absoluteY="199dp" />

        <TextView
            android:id="@+id/viewloc_textview_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@+id/viewloc_ratingbar_rating"
            app:layout_constraintStart_toEndOf="@+id/viewloc_ratingbar_rating"
            app:layout_constraintTop_toTopOf="@+id/viewloc_ratingbar_rating" />

        <TextView
            android:id="@+id/viewloc_text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textMultiLine"
            android:text="title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/viewloc_textview_address"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/viewloc_textview_label_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="by"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewloc_text_title" />

        <TextView
            android:id="@+id/viewloc_textview_postuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/viewloc_textview_label_by"
            app:layout_constraintStart_toEndOf="@+id/viewloc_textview_label_by"
            app:layout_constraintTop_toTopOf="@+id/viewloc_textview_label_by" />

        <ImageView
            android:id="@+id/viewloc_imageview"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewloc_textview_cat1"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/viewloc_textview_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintStart_toStartOf="@+id/viewloc_guideline50"
            app:layout_constraintTop_toTopOf="@+id/viewloc_text_title" />

        <TextView
            android:id="@+id/viewloc_textview_postrating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@+id/viewloc_ratingbar_rating"
            app:layout_constraintEnd_toStartOf="@+id/viewloc_ratingbar_rating"
            app:layout_constraintTop_toTopOf="@+id/viewloc_ratingbar_rating" />

        <Button
            android:id="@+id/viewloc_button_like"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/light_grey"
            android:insetLeft="6dp"
            android:insetRight="6dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHighlight="@color/ghost_white"
            app:icon="@drawable/ic_baseline_thumb_up_24"
            app:iconPadding="20dp"
            app:iconTint="@color/colour1"
            app:layout_constraintBottom_toBottomOf="@+id/viewloc_imageview"
            app:layout_constraintEnd_toStartOf="@+id/viewloc_button_dislike" />

        <Button
            android:id="@+id/viewloc_button_dislike"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/light_grey"
            android:textColorHighlight="@color/ghost_white"
            android:textColorLink="@color/ghost_white"
            app:icon="@drawable/ic_baseline_thumb_down_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/viewloc_button_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewloc_button_like" />

        <RatingBar
            android:id="@+id/viewloc_ratingbar_rating"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:progressTint="@color/colour1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewloc_imageview" />

        <TextView
            android:id="@+id/viewloc_textview_label_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Categories: "
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/viewloc_text_title"
            app:layout_constraintTop_toBottomOf="@+id/viewloc_barrier" />

        <TextView
            android:id="@+id/viewloc_textview_cat1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Category"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewloc_textview_label_categories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/viewloc_textview_label_categories"
            app:layout_constraintTop_toTopOf="@+id/viewloc_textview_label_categories"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/viewloc_edittext_comment"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="Comment..."
            android:inputType="textMultiLine"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="@+id/viewloc_textview_description"
            app:layout_constraintStart_toStartOf="@+id/viewloc_textview_description"
            app:layout_constraintTop_toBottomOf="@+id/viewloc_textview_description" />

        <Button
            android:id="@+id/viewloc_button_commentadd"
            android:layout_width="186dp"
            android:layout_height="122dp"
            android:background="@drawable/ic_new_button2"
            android:text="Add"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/viewloc_edittext_comment"
            app:layout_constraintStart_toStartOf="@+id/viewloc_edittext_comment"
            app:layout_constraintTop_toBottomOf="@+id/viewloc_edittext_comment" />

        <TextView
            android:id="@+id/viewloc_textview_topcomment_username1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:text="comments"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewloc_button_commentadd" />

        <Button
            android:id="@+id/viewloc_button_share"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            app:icon="@drawable/ic_baseline_share_24"
            app:layout_constraintBottom_toBottomOf="@+id/viewloc_imageview"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/viewloc_textview_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:inputType="textMultiLine"
            android:text="description"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewloc_ratingbar_rating" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/viewloc_guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>